# Entix-Engine

./: .gitignore  CMakeLists.txt  README.md  TODO.md
Game/: CMakeLists.txt
Game/Source/: GameMain.h  Main.cpp
Libraries/: CMakeLists.txt  README.md
Libraries/GameFramework/: CMakeLists.txt
Libraries/GameFramework/Source/: GameFramework.h
Libraries/GameFramework/Source/GameFramework/: Application.cpp  Application.h  Components.cpp  Components.h  Entity.cpp  Entity.h  EntryPoint.h  GUILayer.cpp  GUILayer.h  Layer.h  LayerStack.cpp  LayerStack.h  ObjMeshLoader.cpp  ObjMeshLoader.h  Scene.cpp  Scene.h  ScriptableEntity.h  ShaderLoader.cpp  ShaderLoader.h  TextureLoader.cpp  TextureLoader.h
Libraries/GameFramework/Source/GameFramework/Systems/: MeshRender.cpp  MeshRender.h
Libraries/Runtime/: CMakeLists.txt
Libraries/Runtime/Source/Core/: Assert.h  Base.h.in  EventSystem.cpp  EventSystem.h  File.cpp  File.h  FileReader.cpp  FileReader.h  Hash.h  Memory.cpp  Memory.h  String.h  StringCommandRunner.cpp  StringCommandRunner.h  Time.h  Timestep.h  TypeName.h  Types.cpp  Types.h  Window.h
Libraries/Runtime/Source/Core/Debug/: Log.cpp  Log.h  LogEntry.cpp  LogEntry.h  LogFormatters.cpp  LogFormatters.h  LogLevel.cpp  LogLevel.h  LogSinks.cpp  LogSinks.h
Libraries/Runtime/Source/Core/IO/: Base.h  Decorators.h  FileReader.cpp  FileReader.h  Reader.h  Writer.h
Libraries/Runtime/Source/Core/Resources/: ResourceManager.cpp  ResourceManager.h
Libraries/Runtime/Source/Drivers/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Libraries/Runtime/Source/Drivers/SDL3/: InputSDL.cpp  TicksSDL.cpp  WindowSDL.cpp  WindowSDL.h
Libraries/Runtime/Source/Input/: ActionSystem.cpp  ActionSystem.h  Actions.h  Base.cpp  Base.h  Events.h
Libraries/Runtime/Source/Math/: Matrix.h  MatrixTransform.h  Quat.h  TypePtr.h  Vector.h
Libraries/Runtime/Source/Renderer/: Buffer.h  Context.cpp  Context.h  Framebuffer.h  Rect.h  Shader.cpp  Shader.h  Texture.h  VertexArray.h  Viewport.h
Libraries/Runtime/Source/Resources/: Handle.h  Manager.h  Resource.h  ResourceHandle.h  ResourceId.h  ResourceLoader.h  ResourceManager.cpp  ResourceManager.h
Libraries/Runtime/Source/WSI/: ActionSystem.cpp  ActionSystem.h  Input.h  Window.h
Projects/: CMakeLists.txt  README.md
Projects/Editor/: CMakeLists.txt  action_map.json
Projects/Editor/Assets/Shaders/: Textures.glsl
Projects/Editor/Source/: EditorLayer.cpp  EditorLayer.h  Main.cpp  SquareMesh.h
Projects/Editor/Source/Panels/: ConsolePanel.cpp  ConsolePanel.h  InspectorPanel.cpp  InspectorPanel.h  PanelBase.cpp  PanelBase.h  PropertiesPanel.cpp  PropertiesPanel.h
Projects/VoxelGame/: CMakeLists.txt
Projects/VoxelGame/Assets/Shaders/: SimpleShader.glsl
Projects/VoxelGame/Source/: GameLayer.cpp  GameLayer.h  Main.cpp  PlayerController.h  SquareMesh.h
Projects/VoxelGame/Source/Scripts/: Player.cpp  Player.h  PlayerCamera.cpp  PlayerCamera.h
Projects/Voxenty/: CMakeLists.txt
Projects/Voxenty/Source/: EditorLayer.cpp  EditorLayer.h  Main.cpp
Runtime/: CMakeLists.txt
Runtime/Source/: ERuntimeExport.h
Runtime/Source/Core/: Application.cpp  Application.h  Event.h  EventBus.cpp  EventBus.h  Log.cpp  Log.h  Memory.h  Window.h
Runtime/Source/Core/Impl/: ApplicationImpl_SDL.cpp  WindowImpl_SDL.cpp
Runtime/Source/Drivers/DX12/: RenderingDeviceDX12.cpp  RenderingDeviceDX12.h
Runtime/Source/Drivers/OpenGL/: RenderingContextGL.cpp  RenderingContextGL.h  RenderingDeviceGL.cpp  RenderingDeviceGL.h
Runtime/Source/Drivers/SDL/: ApplicationSDL.cpp  WindowSDL.cpp  WindowSDL.h
Runtime/Source/RHI/: RenderingContext.h  RenderingDevice.cpp  RenderingDevice.h
Shaders/: Textures.glsl
runtime/: CMakeLists.txt  action_map.json
runtime/benchmarks/: README.md
runtime/include/Core/: Application.h  EntryPoint.h  File.h  StringCommandRunner.h  Types.h
runtime/include/Core/Debug/: Log.h  LogSinks.h
runtime/include/Core/IO/: Writer.h
runtime/include/ECS/: Scene.h
runtime/include/GUI/: ConsoleWindow.h  Context.h  Widget.h  Window.h
runtime/include/Renderer/: Buffer.h  Context.h  Shader.h
runtime/include/Scene/: Components.h  Entity.h  Scene.h
runtime/include/WSI/: ActionSystem.h
runtime/shaders/: simple_shader.glsl
runtime/source/Core/: Application.cpp  File.cpp  StringCommandRunner.cpp
runtime/source/Core/Debug/: Log.cpp
runtime/source/Drivers/OpenGL/: OpenGLBuffer.cpp  OpenGLContext.h  OpenGLShader.cpp  OpenGLShader.h
runtime/source/ECS/: Scene.cpp
runtime/source/GUI/: ConsoleWindow.cpp  Context.cpp  Widget.cpp  Window.cpp
runtime/source/Scene/: Scene.cpp
runtime/source/WSI/: ActionSystem.cpp
runtime/tests/: README.md
source/: example.cs  main.cpp  vbox.h
